--- a/Login.html
+++ b/Login.html
@@ -65,7 +65,7 @@
           padding-left: 60px;
         }
         .box{
-          opacity:0.8;
+          opacity:0.8;/*透明度*/
           padding-top: 50px;
           box-sizing: border-box;
           margin: 100px auto;
