--- a/Login.html
+++ b/Login.html
@@ -23,6 +23,7 @@
             </form>
           </div>
         <style>
+            // border:边框 margin:外边距 padding:内边距 height:高 width：宽度      实际显示高和显示宽比这的，设置box-sizing: border-box;后则一样大
         *{
           margin: 0;
           padding: 0;
