--- a/Login.html
+++ b/Login.html
@@ -52,6 +52,14 @@
           width: 300px;
           color:white;
           font-size: 30px;
+          animation: myanim 1s infinite; /*动画*/
+        }
+        @keyframes myanim{
+          0%{text-shadow:1px 2px 5px white;} /*文字阴影： 水平距离|竖直距离|模糊距离|颜色*/
+          25%{text-shadow:1px 2px 6px white;}
+          50%{text-shadow:1px 2px 7px white;}
+          75%{text-shadow:1px 2px 6px white;}
+          100%{text-shadow:1px 2px 5px white;}
         }
         .username{
           margin: 20px 50px;
