--- a/Login.html
+++ b/Login.html
@@ -42,7 +42,7 @@
           width: 400px;
           background-color:  #001f3f;
           border-radius: 15px;
-          box-shadow:0px 0px 2px 2px black;/* 水平|竖直|模糊距离|阴影尺寸|颜色*/
+          box-shadow:0px 0px 2px 2px black;/* 盒子阴影： 水平|竖直|模糊距离|阴影尺寸|颜色*/
         }
         /*实际显示高/宽=边框+外边距+内边距+高/宽*/
         .tlt{
