--- a/Login.html
+++ b/Login.html
@@ -57,7 +57,7 @@
         @keyframes myanim{
           0%{text-shadow:1px 2px 5px white;} /*文字阴影： 水平距离|竖直距离|模糊距离|颜色*/
           25%{text-shadow:1px 2px 6px white;}
-          50%{text-shadow:1px 2px 7px white;}
+          50%{text-shadow:1px 2px 7px black;}
           75%{text-shadow:1px 2px 6px white;}
           100%{text-shadow:1px 2px 5px white;}
         }
